# libbpf

./: .gitignore  .gitmodules  .mailmap  .readthedocs.yaml  .travis.yml  BPF-CHECKPOINT-COMMIT  CHECKPOINT-COMMIT  LICENSE.LGPL-2.1  README  README.md  SYNC.md  bla.txt  build.zig  build.zig.zon  libbpf.spec  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/build-selftests/: action.yml  build_selftests.sh  helpers.sh  prepare_selftests-4.9.0.sh  vmlinux.h
.github/actions/setup/: action.yml
.github/actions/vmtest/: action.yml
.github/workflows/: build.yml  cifuzz.yml  codeql.yml  coverity.yml  lint.yml  ondemand.yml  pahole.yml  test-new.yml  test.yml  vmtest.yml
ci/: build-in-docker.sh
ci/diffs/: 0001-selftests-bpf-Select-CONFIG_FUNCTION_ERROR_INJECTION.patch  0001-selftests-bpf-give-find_vma-test-more-time-to-collec.patch  0001-selftests-bpf-set-test-path-for-token-obj_priv_impli.patch  0001-selftests-bpf-test-case-for-callback_depth-states-pr.patch  0100-selftests-bpf-fix-for-bpf_signal-stalls-watchdog-for.patch  20260312-selftests-bpf-Bump-path-and-command-buffer-sizes-in-.patch  20260603-selftests-bpf-Fix-flaky-file_reader-test.patch  4000-selftests-bpf-Fix-tests-after-fields-reorder-in-stru.patch  4001-selftests-bpf-Fix-verifier_bpf_fastcall-test.patch  4002-selftests-bpf-Fix-verifier_private_stack-test-failur.patch
ci/managers/: debian.sh
ci/rootfs/: mkrootfs_debian.sh  mkrootfs_tweak.sh
ci/rootfs/s390x-self-hosted-builder/: README.md  actions-runner-libbpf.Dockerfile
ci/vmtest/: prepare-selftests-LATEST.sh  prepare-selftests-build-5.5.0.sh  prepare-selftests-run.sh  run_selftests.sh  vmtest_selftests.sh
ci/vmtest/configs/: ALLOWLIST-5.5.0  DENYLIST  DENYLIST-5.5.0  DENYLIST-latest  DENYLIST-latest.s390x  (+1 more)
docs/: api.rst
fuzz/: readme.md
include/linux/: compiler.h  err.h  filter.h  kernel.h  list.h  overflow.h  types.h
scripts/: build-fuzzers.sh  check-reallocarray.sh  coverity.sh  sync-kernel.sh
src/: .gitignore  Makefile  bpf.c  bpf.h  bpf_core_read.h  bpf_gen_internal.h  bpf_helper_defs.h  bpf_helpers.h  bpf_tracing.h  btf.c  btf.h  btf_dump.c  btf_relocate.c  elf.c  features.c  gen_loader.c  hashmap.h  libbpf.c  libbpf.h  libbpf.map  libbpf_internal.h  libbpf_probes.c  linker.c  nlattr.c  relo_core.c  ringbuf.c  skel_internal.h  strset.c  usdt.c  xsk.c  xsk.h
src/docs/: api.rst  build.rst  index.rst  naming_convention.rst
travis-ci/managers/: debian.sh  test_compile.sh  ubuntu.sh  xenial.sh
travis-ci/rootfs/: mkrootfs_debian.sh  mkrootfs_tweak.sh
travis-ci/vmtest/: build_latest_kernel.sh  build_pahole.sh  build_selftests.sh  checkout_latest_kernel.sh  helpers.sh  mkrootfs.sh  mkrootfs_arch.sh  mkrootfs_debian.sh  prepare_selftests-4.9.0.sh  prepare_selftests-5.5.0.sh  prepare_selftests.sh  run.sh  run_selftests.sh  run_vmtest.sh  setup_example.sh  vmlinux.h
(+27 files in other folders)
